[project]
name = "parse-s13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.1",
    "duckdb>=1.5.3",
    "marimo>=0.23.9",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "python-docx>=1.2.0",
    "sqlglot>=30.11.0",
    "xlsxwriter>=3.2.9",
]
